@@ -399,4 +399,6 @@ Mod(1, 1009)*x^-1 + Mod(740, 1009)*x^3 + Mod(123, 1009)*x^7 + Mod(150, 1009)
 *x^11 + O(x^15)
 Mod(1, 1009)*x + Mod(185, 1009)*x^5 + Mod(101, 1009)*x^9 + Mod(990, 1009)*x^
 13 + O(x^17)
-Total time spent: 548
+-52760
+-52832
+Total time spent: 640
