@@ -9,6 +9,9 @@ Done for version 2.8.0 (released ??/??/2014):
     3- lambertw(3+O(x)) -> SEGV
     4- lambertw(x) -> wrong number of terms (absolute vs relative prec)
     5- [] == 0 but []~ != 0  (now []~ == 0 as well) [#1560]
+    6- ellap can overflow on 32-bit machine [#1558]
+       ellap(ellinit([582304190,64196421]),2147438927) -> overflow
+       ellap(ellinit([-1137195,489565862]),2038074751) -> wrong result
 
   Added
     1- add optional argument to sumdigits to specify the base
